# pygqlgen

./: README.rst  pyproject.toml
pygqlgen/: cmd.py
tests/: test_pygqlgen.py
tests/schemas/: query.gql
